--- a/Domain 2/MusicStore2/main.css
+++ b/Domain 2/MusicStore2/main.css
@@ -1,3 +1,13 @@
-body{
-    font-family: 'Segoe UI', Tahoma, sans-serif
+body
+{
+    font-family:"Segoe UI",Tahoma,sans-serif;
+    background-color: fuchsia;
+} 
+p{
+    color: navy;
+}
+
+.sale{
+    font-weight: bold;
+    background-color: aqua;
 }
