--- a/Domain 5/MusicStore5/52f-main.css
+++ b/Domain 5/MusicStore5/52f-main.css
@@ -42,3 +42,7 @@ a:hover {
     font-weight: bold;
     font-family: 'Palatino Linotype','Times New Roman', serif;
 }
+td.vbot{
+    vertical-align: bottom;
+    height: 30px;
+}
